<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<com.appointment.MultiSpinner
     android:id="@+id/multi_spinner"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     
     
     />
    <TextView
        android:id="@+id/txtTitleStartTime"
        android:layout_below="@+id/multi_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/strStartTime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtTitleStartTime"
        android:layout_below="@+id/multi_spinner"
        android:text="@string/strStartTime" />

    <TextView
        android:id="@+id/txtTitleEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtTitleStartTime"
        android:layout_marginTop="20dp"
        android:text="@string/strEndTime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnStartTime"
        android:layout_alignTop="@+id/txtTitleEndTime"
        android:text="@string/strEndTime" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/strSubmit" />

    <TextView
        android:id="@+id/txtStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStartTime"
        android:layout_alignBottom="@+id/btnStartTime"
        android:layout_alignParentRight="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnEndTime"
        android:layout_alignBottom="@+id/btnEndTime"
        android:layout_alignParentRight="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
