<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_top"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/linLayHeading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="@android:color/transparent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgPickMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayProfilePic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@android:color/transparent" >

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/circleimage"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayProfile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:padding="5dp" >

        <Spinner
            android:id="@+id/spnCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
           
            android:layout_marginTop="5dp"
            android:entries="@array/category_arrays"
            android:paddingLeft="10dp"
            android:prompt="@string/service_category_prompt" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spnCategory"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:hint="@string/strName"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colEdtFont"
            android:textColorHint="@color/colHintFont" >
        </EditText>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtName"
            android:layout_below="@+id/edtName"
            android:layout_centerVertical="true"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:hint="@string/strEmail"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colEdtFont"
            android:textColorHint="@color/colHintFont" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtEmail"
            android:layout_below="@+id/edtEmail"
            android:layout_centerVertical="true"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:hint="@string/strPhone"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colEdtFont"
            android:textColorHint="@color/colHintFont" >
        </EditText>

        <EditText
            android:id="@+id/edtPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtPhone"
            android:layout_below="@+id/edtPhone"
            android:layout_centerVertical="true"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:hint="@string/strPlace"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colEdtFont"
            android:textColorHint="@color/colHintFont" >
        </EditText>

        <EditText
            android:id="@+id/edtAltEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtPlace"
            android:layout_below="@+id/edtPlace"
            android:layout_centerVertical="true"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:hint="@string/strAltEmail"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colEdtFont"
            android:textColorHint="@color/colHintFont" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtAltEmail"
            android:layout_below="@+id/edtAltEmail"
            android:layout_centerVertical="true"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:hint="@string/strPass"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
             android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colEdtFont"
            android:textColorHint="@color/colHintFont" />
        <!--
            <TextView
                android:id="@+id/txtSelectCateg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                 android:layout_centerVertical="true"
            android:layout_marginTop="7dp"
                 android:layout_alignLeft="@+id/edtPassword"
                  android:layout_below="@+id/edtPassword"
                android:text="Select Category :"
                 android:paddingLeft="10dp"
                  android:textColor="@color/colHintFont"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        -->

        <RelativeLayout
            android:id="@+id/relLaybutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/edtPassword"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp" >

            <ImageButton
                android:id="@+id/imgbtnSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>